# DShandler

./: .gitignore  Makefile  README.md  pyproject.toml
dspipeline/: __init__.py  cleaning.py  diagnostics.py  pipeline.py  preprocessing.py  statistics.py
tests/: test_pipeline.py
