[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name            = "dspipeline"
version         = "0.1.0"
description     = "A stateful, chainable data science pipeline for tabular ML workflows."
readme          = "README.md"
license         = { file = "LICENSE" }
authors         = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.9"
keywords        = [
    "machine learning", "data science", "pipeline", "preprocessing",
    "feature engineering", "EDA", "cleaning", "imputation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=1.5",
    "numpy>=1.23",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "statsmodels>=0.14",
    "matplotlib>=3.6",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "twine>=4",
    "build>=0.10",
    "ruff",
    "mypy",
]

[project.urls]
Homepage   = "https://github.com/yourusername/dspipeline"
Repository = "https://github.com/yourusername/dspipeline"
Issues     = "https://github.com/yourusername/dspipeline/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["dspipeline*"]

[tool.setuptools.package-data]
dspipeline = ["py.typed"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.pytest.ini_options]
testpaths    = ["tests"]
addopts      = "-v --tb=short"
